<resources>
    <string name="app_name">Application</string>
    <string name="bottom_navigation_home">主页</string>
    <string name="bottom_navigation_detect">检测</string>
    <string name="bottom_navigation_history">历史</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detect_frag_capture">相机</string>
    <string name="detect_frag_upload_file">上传文件</string>
    <string name="history_btn_detail">详情</string>
    <string name="history_btn_delete">删除</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_text">\@ Powered By BUAA, VRLab</string>
    <string name="detect_frag_intro">长按下方图片以上传</string>
    <string name="detect_frag_nonuploaded">未上传图像</string>
    <string name="main_toolbar_menu_options">应用设置</string>
    <string name="main_toolbar_menu_about_us">关于我们</string>
    <string name="history_date_text">检测时间:</string>
    <string name="history_date_text_default">2020-1-1 00:00:00</string>
    <string name="history_abstract_default">共检测到x张邮票，共分为y类</string>
    <string name="detect_result_title">识别结果</string>
    <string name="clear_cache">清除缓存</string>
    <string name="dialog_notice">提示</string>
    <string name="history_frag_del_dialog_msg">请确认删除此记录</string>
    <string name="history_frag_del_dialog_posi">删除</string>
    <string name="history_frag_del_dialog_nega">取消</string>
    <string name="option_remote_server_title">远程服务器</string>
    <string name="remote_server1">123.56.137.91</string>
    <string name="remote_server2">\???</string>
    <string name="option_img_crop_ratio_title">图片裁剪比例</string>
    <string name="crop_ratio1">297 : 210</string>
    <string name="crop_ratio2">16 : 9</string>
    <string name="crop_ratio3">1 : 1</string>
    <string name="detect_frag_detail">查看结果</string>
</resources>