<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            >

            <!-- Media -->
            <ImageView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_history_blue_500_24dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:id="@+id/preview_img"
                />
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100"
                android:gravity="center_vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/divider_grey_1dp"
                    android:layout_weight="80"
                    >

                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/div1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingEnd="5dp"
                        android:textSize="18sp"
                        android:text="@string/history_date_text"
                        android:id="@+id/history_date"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_date_text_default"
                    android:id="@+id/date"
                    android:layout_below="@id/div1"
                    >
                </TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/summary"
                        android:text="@string/history_abstract_default">
                    </TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/history_btn_detail"
                        android:id="@+id/btn_detail"
                        style="?attr/borderlessButtonStyle"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_btn_delete"
                        android:id="@+id/btn_delete"
                        style="?attr/actionButtonStyle"
                        />
                </LinearLayout>
            </RelativeLayout>

            <!-- Buttons -->


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>