<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".optionpage.OptionCropRatioActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:id="@+id/material_toolbar"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="@string/option_img_crop_ratio_title"
                app:titleTextColor="@color/black"
                app:navigationIcon="@drawable/baseline_arrow_back_grey_24dp"

                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginVertical="10dp"
            >

            <!-- Scrollable content -->

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_below="@id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/ratio1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layoutDirection="rtl"
            android:textDirection="ltr"
            android:text="@string/crop_ratio1"/>
        <RadioButton
            android:id="@+id/ratio2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layoutDirection="rtl"
            android:textDirection="ltr"
            android:text="@string/crop_ratio2"/>
        <RadioButton
            android:id="@+id/ratio3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layoutDirection="rtl"
            android:textDirection="ltr"
            android:text="@string/crop_ratio3"/>
    </RadioGroup>
</RelativeLayout>