<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetectFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detect_frag_intro"
            android:textColor="@color/pink"
            android:gravity="center_horizontal"
            android:id="@+id/detect_frag_text1"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"

            />
        <ImageView
            android:layout_width="360dp"
            android:layout_marginHorizontal="15dp"
            android:scaleType="centerCrop"
            android:layout_height="240dp"
            android:layout_below="@id/detect_frag_text1"
            android:id="@+id/detect_frag_img1"
            android:layout_centerHorizontal="true"
            android:background="#fcfcfc"
            android:src="@mipmap/upload_icon"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detect_frag_img1"
            android:weightSum="100"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:id="@+id/div1"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detect_frag_nonuploaded"
                android:layout_weight="35"
                android:enabled="false"
                android:id="@+id/detect_frag_btn_run1"
                android:visibility="invisible"
                >

            </Button>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                >

            </View>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detect_frag_nonuploaded"
                android:layout_weight="35"
                android:enabled="false"
                android:visibility="invisible"
                android:id="@+id/detect_frag_btn_run2"
                >

            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/div2"
            android:layout_below="@id/div1"
            android:weightSum="100"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:backgroundTint="@color/green"
                android:id="@+id/detect_frag_btn_run3"
                android:visibility="invisible"
                android:text="@string/detect_frag_detail"
                >

            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="360dp"
            android:layout_marginHorizontal="15dp"
            android:scaleType="centerCrop"
            android:layout_height="240dp"
            android:layout_below="@id/div2"
            android:id="@+id/detect_frag_img2"
            android:layout_centerHorizontal="true"
            android:background="#fcfcfc"
            android:visibility="gone"
            />
        </RelativeLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/round_add_black_24dp"
            app:tint="@color/white"
            app:backgroundTint="@color/indigo_lighten_1"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/snackbar_bottom"
        android:layout_alignParentBottom="true"
        >

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>



